--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Michael-叶落
-subtitle: 'Life is short and beautiful, do not waste it!'
+title: 叶落
+subtitle: '往事如风，常伴吾身。挥洒不去，思之如梦。'
 description: 'my blog'
 keywords:
 author: Michaelz
